# aubo-rs

./: .gitignore  CI_IMPROVEMENTS.md  Cargo.toml  README.md  ZYGISK_INTEGRATION.md  aubo-rs.toml  build.gradle.kts  build.rs  debug_device.sh  zygisk_next_api.h
.github/workflows/: ci.yml
benches/: performance.rs
scripts/: build.ps1  build_module.sh  deploy.sh  test_ci.sh  troubleshoot_ci.sh
src/: config.rs  engine.rs  error.rs  filters.rs  hooks.rs  lib.rs  stats.rs  utils.rs  zygisk.rs
src/cpp/: CMakeLists.txt  aubo_module.cpp
template/: customize.sh  module.prop  post-fs-data.sh  sepolicy.rule  service.sh  zn_modules.txt
tests/: integration_tests.rs
