[package]
name = "aubo-rs"
version = "1.0.0"
authors = ["aubo-rs contributors"]
edition = "2021"
description = "Android uBlock Origin Rust - System-wide ad-blocker for Android using ZygiskNext"
license = "GPL-3.0"
repository = "https://github.com/your-username/aubo-rs"
keywords = ["android", "adblock", "zygisk", "rust", "system-wide"]
categories = ["network-programming", "web-programming"]
readme = "README.md"

[lib]
name = "aubo_rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Core dependencies for networking and async operations
tokio = { version = "1.0", features = ["rt", "sync", "time", "macros"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"], optional = true }
url = "2.5"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"
ahash = "0.8"

# Network and HTTP parsing
httparse = "1.8"
mime = "0.3"

# Pattern matching and filtering
aho-corasick = "1.1"
memchr = "2.7"
globset = "0.4"

# Serialization and configuration
toml = "0.8"
bincode = "1.3"

# Performance and memory management
rayon = "1.8"
crossbeam = "0.8"
bytes = "1.5"
smallvec = "1.11"
num_cpus = "1.16"

# Android specific (only when targeting Android)
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk = "0.8"
ndk-sys = "0.5"

# C FFI bindings
libc = "0.2"

# Build dependencies
[build-dependencies]
cc = "1.0"
bindgen = "0.69"

# Development dependencies
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"

# Profile optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true

# Android specific configurations
[target.'cfg(target_os = "android")']
# Linker configuration is handled by cargo-ndk

# Features for different build configurations
[features]
default = ["full"]
full = ["filter-engine", "network-hooks", "performance-monitoring", "network"]
filter-engine = []
network-hooks = []
performance-monitoring = []
debug-logging = []
bindgen = []
network = ["reqwest"]

# Note: This is a single-crate project, not a workspace
# All functionality is contained in src/ directory

# Benchmarks
[[bench]]
name = "performance"
harness = false